--- a/student_management_app/templates/hod_template/footer.html
+++ b/student_management_app/templates/hod_template/footer.html
@@ -1,5 +1,5 @@
 <footer class="main-footer">
-      <strong>Copyright &copy; {% now "Y" %}, <a href="#">Sizan @ Mazhar</a>.</strong> 
+      <strong>Copyright &copy; {% now "Y" %}, <a href="#">SIZAN&MAZHAR</a>.</strong> 
       All rights reserved.
       <div class="float-right d-none d-sm-inline-block">
         {% comment %} <b>Version</b> 1.0 {% endcomment %}
