--- a/student_management_app/templates/student_template/footer.html
+++ b/student_management_app/templates/student_template/footer.html
@@ -1,5 +1,5 @@
 <footer class="main-footer">
-      <strong>Copyright &copy; {% now "Y" %}, <a href="https://itsourcecode.com">ITSOURCECODE</a>.</strong> 
+      <strong>Copyright &copy; {% now "Y" %}, <a href="#">SIZAN&MAZHAR</a>.</strong> 
       All rights reserved.
       <div class="float-right d-none d-sm-inline-block">
         <b>Version</b> 1.0
